fixing some actions/header/sidebar z-index stuff

--- a/css/template.less
+++ b/css/template.less
@@ -26,12 +26,12 @@ a { text-decoration: none; }
 
 //#wrap {position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow-y: scroll;}
 #wrap {}
-#sidebar {position: fixed; z-index: 12; left: -100%; width: 100%; height: 100%; .transition(left .3s);}
+#sidebar {position: fixed; z-index: 13; left: -100%; width: 100%; height: 100%; .transition(left .3s);}
 #app {.transition(left .3s);}
 #main {padding: @header_height 0 64rem 0; .transition(left .3s);}
 
 @header_pad_top: 4rem;
-header {position: fixed; z-index: 13; width: 100%; height: (@header_height - @header_pad_top); margin: 0 0 0 0; padding: @header_pad_top 0 0 0; background: #222; .layer-rest();}
+header {position: fixed; z-index: 14; width: 100%; height: (@header_height - @header_pad_top); margin: 0 0 0 0; padding: @header_pad_top 0 0 0; background: #222; .layer-rest();}
 header.under {z-index: 10;}
 header {
 	a.logo {position: absolute; display: block; width: 60rem; height: 28rem; margin: 3rem 0 0 0;}
